feat(rag): enhance RAG logic with configurable splitter, citation, and optimized prompt

--- a/config.example.ini
+++ b/config.example.ini
@@ -21,6 +21,8 @@ api_key = sk-xxx
 docs_path = docs
 vector_store_path = vector_store
 embedding_model = ./models/bge-base-en
+chunk_size = 500
+chunk_overlap = 100
 
 [settings]
 sys_prompt_path = prompts/sys_prompt.txt
